--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -1,15 +1,15 @@
 ---
 Name: nodejs
-Description: Custom Node.js cartridge auto-updating to the latest stable version on each build.
-Version: '5.0.0'
+Description: Custom Node.js cartridge auto-updating to version 4.0.0 on each build.
+Version: '4.0.0'
 License: Node.js License
 License-Url: https://raw.githubusercontent.com/nodejs/node/master/LICENSE
 Vendor: www.nodejs.org
 Website: http://www.nodejs.org/
 Display-Name: Node.js Auto-Updating
 Cartridge-Short-Name: NODEJS
-Cartridge-Version: '1.3.2'
-Cartridge-Vendor: icflorescu
+Cartridge-Version: '1.0.0'
+Cartridge-Vendor: giusgiand
 Categories:
 - service
 - javascript
